--- a/ApplicationServer/src/app/component/splash/splash.component.html
+++ b/ApplicationServer/src/app/component/splash/splash.component.html
@@ -6,3 +6,4 @@
     <p><a class="btn btn-primary btn-lg" href="https://github.com/Kidel/MEAN-Blog" role="button" target="_blank">Learn more &raquo;</a></p>
   </div>
 </div>
+{{ dataList | json }}
