fixed credentials and more styling

--- a/ApplicationServer/src/app/app.component.html
+++ b/ApplicationServer/src/app/app.component.html
@@ -1,3 +1,16 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<!-- Page Content -->
+<div class="container">
+    <div class="row">
+        <!-- Post Content Column -->
+        <div class="col-lg-8">
+            <router-outlet></router-outlet>
+        </div>
+        <!-- Sidebar Widgets Column -->
+        <div class="col-md-4">
+            <app-search></app-search>
+            <app-login></app-login>
+        </div>
+    </div>
+</div>
 <app-footer></app-footer>
