--- a/ApplicationServer/src/app/component/login/login.component.html
+++ b/ApplicationServer/src/app/component/login/login.component.html
@@ -1,4 +1,26 @@
-<div>
-  login works!
-  <div>{{logged}}</div>
-</div>
+<!-- Search Widget -->
+<form (submit)="login()" ngNativeValidate>
+    <div class="card my-4">
+        <h5 class="card-header">Login</h5>
+        <div class="card-body">
+          <div *ngIf="!globals.logged;else welcomeMessage">
+            <div class="form-group">
+              <input type="email" name="email" placeholder="Email" class="form-control mr-sm-2" [(ngModel)]="dataSendItem.email" required>
+            </div>
+            <div class="form-group">
+              <input type="password" name="password" placeholder="Password" class="form-control mr-sm-2" [(ngModel)]="dataSendItem.password" required>
+            </div>
+            <input type="submit" value="Login" class="btn btn-primary">
+            <div [class.show-feedback]="error" class="invalid-feedback">{{ error }}</div>
+          </div>
+
+          <ng-template #welcomeMessage>
+            <div class="navbar-text">
+              Welcome!
+              <a href="#" (click)="logout($event)" class="navbar-link">Logout</a>
+            </div>
+          </ng-template>
+
+        </div>
+    </div>
+</form>
