--- a/ApplicationServer/src/app/component/users/users.component.html
+++ b/ApplicationServer/src/app/component/users/users.component.html
@@ -2,29 +2,30 @@
   users: {{ dataList | json }}
 </p>
 
+{{ error }}
 
 <div>
   <form>
     <div>
       <label for="name">Name: </label>
-      <input type="text" [(ngModel)]="dataItem.name" name="name" required>
+      <input type="text" [(ngModel)]="dataSendItem.name" name="name" required>
     </div>
     <div>
       <label for="email">Email: </label>
-      <input type="email" [(ngModel)]="dataItem.email" name="email" required>
+      <input type="email" [(ngModel)]="dataSendItem.email" name="email" required>
     </div>
     <div>
       <label for="password">Password: </label>
-      <input type="password" [(ngModel)]="dataItem.password" name="password" required>
+      <input type="password" [(ngModel)]="dataSendItem.password" name="password" required>
     </div>
     <div>
       <label for="authority">Authority: </label>
-      <input type="text" [(ngModel)]="dataItem.authority" name="authority" required>
+      <input type="text" [(ngModel)]="dataSendItem.authority" name="authority" required>
     </div>
     <div>
       <button (click)="submit()">Submit</button>
     </div>
   </form>
 </div>
-
+{{ dataSendItem | json }}
 {{ dataItem | json }}
