--- a/ApplicationServer/src/app/app.component.html
+++ b/ApplicationServer/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <!-- Page Content -->
-<div class="container">
+<div class="container margin-bottom">
     <div class="row">
         <!-- Post Content Column -->
         <div class="col-lg-8">
@@ -8,8 +8,8 @@
         </div>
         <!-- Sidebar Widgets Column -->
         <div class="col-md-4">
-            <app-search></app-search>
             <app-login></app-login>
+            <app-search></app-search>
         </div>
     </div>
 </div>
