--- a/ApplicationServer/src/app/component/post/post.component.html
+++ b/ApplicationServer/src/app/component/post/post.component.html
@@ -1,3 +1,41 @@
-<p>
-  post: {{ dataItem | json }}
+<!-- Title -->
+<h1 class="mt-4">{{ dataItem.title }}</h1>
+
+<!-- Author -->
+<p class="lead">
+  by
+  <a href="#" routerLink="users/id/{{ dataItem.author._id }}">{{ dataItem.author.name }}</a>
 </p>
+<!-- Date/Time -->
+<p>Posted on {{ dataItem.created | date:'full' }} <span *ngIf="dataItem.edited">Last edit on {{ dataItem.edited | date:'full' }}</span></p>
+
+<hr>
+
+<!-- Post Content -->
+<p class="lead">{{ dataItem.body }}</p>
+
+<!-- Comments Form -->
+<div class="card my-4" *ngIf="globals.logged">
+  <h5 class="card-header">Leave a Comment:</h5>
+  <div class="card-body">
+    <form (submit)="addComment()" ngNativeValidate>
+      <div class="form-group">
+        <textarea class="form-control" rows="3" [(ngModel)]="dataSendItem.comment" name="comment" required></textarea>
+      </div>
+      <input type="submit" value="Submit" class="btn btn-primary">
+    </form>
+  </div>
+</div>
+
+<div *ngFor="let c of dataItem.comments">
+  <!-- Comment -->
+  <div class="media mb-4">
+    <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+    <div class="media-body">
+      <h5 class="mt-0"><a href="#" routerLink="users/id/{{ c._id }}">{{ c.name }}</a></h5>
+      {{ c.comment }}
+    </div>
+  </div>
+</div>
+
+<hr>
