--- a/ApplicationServer/src/app/template/about/about.component.html
+++ b/ApplicationServer/src/app/template/about/about.component.html
@@ -1,3 +1,5 @@
-<p>
-  about works!
-</p>
+<main role="main" class="container">
+    <h1 class="mt-5">MEAN-Blog</h1>
+    <p class="lead">Simple blog made using Mongo, Express, Angular and Node.js.</p>
+    <p><a href="https://github.com/Kidel/MEAN-Blog" target="_blank" class="btn btn-primary">Learn more...</a></p>
+  </main>
