--- a/ApplicationServer/src/app/template/navbar/navbar.component.html
+++ b/ApplicationServer/src/app/template/navbar/navbar.component.html
@@ -10,9 +10,9 @@
         <li class="nav-item" [class.active]="activeRoute=='/'">
           <a class="nav-link" routerLink="/" (click)="toggleOffcanvas()">Home</a>
         </li>
-        <li class="nav-item" [class.active]="activeRoute=='/users'">
+        <!--<li class="nav-item" [class.active]="activeRoute=='/users'">
           <a class="nav-link" routerLink="/users" (click)="toggleOffcanvas()">Users</a>
-        </li>
+        </li>-->
         <li class="nav-item" [class.active]="activeRoute=='/about'">
           <a class="nav-link" routerLink="/about" (click)="toggleOffcanvas()">About</a>
         </li>
