--- a/ApplicationServer/src/app/component/posts/posts.component.html
+++ b/ApplicationServer/src/app/component/posts/posts.component.html
@@ -34,6 +34,9 @@
   </p>
   <!-- Date/Time -->
   <p>Posted on {{ post.created | date:'full' }} <span *ngIf="post.edited">Last edit on {{ post.edited | date:'full' }}</span></p>
+
+  <!-- Tags -->
+  <p>Tags: <span *ngFor="let t of post.tags"><a href="#" routerLink="/posts/tag/{{ t }}">{{ t }}</a>, </span></p>
   
   <hr>
 
