finished search by tag and user registration

--- a/ApplicationServer/src/app/component/post/post.component.html
+++ b/ApplicationServer/src/app/component/post/post.component.html
@@ -10,7 +10,7 @@
 <p>Posted on {{ dataItem.created | date:'full' }} <span *ngIf="dataItem.edited">Last edit on {{ dataItem.edited | date:'full' }}</span></p>
 
 <!-- Tags -->
-<p>Tags: <span *ngFor="let t of dataItem.tags"><a href="#" routerLink="/posts/tag/{{ t }}">{{ t }}</a>, </span></p>
+<p>Tags: <span class="badge badge-info tag" *ngFor="let t of dataItem.tags"><a href="#" routerLink="/posts/tag/{{ t }}">{{ t }}</a></span></p>
 
 <hr>
 
@@ -36,7 +36,7 @@
 <div *ngFor="let c of dataItem.comments">
   <!-- Comment -->
   <div class="media mb-4">
-      <a href="#" routerLink="/users/id/{{ c?._id }}"><img src="//www.gravatar.com/avatar/{{ hash(c?.email) }}?s=80&amp;d=retro" class="d-flex mr-3 rounded-circle"></a>
+      <a href="#" routerLink="/users/id/{{ c?._id }}"><img src="//www.gravatar.com/avatar/{{ gravatarUrl(c?.email) }}?s=80&amp;d=retro" class="d-flex mr-3 rounded-circle"></a>
     <div class="media-body">
        <h5 class="mt-0"><a href="#" routerLink="/users/id/{{ c?._id }}">{{ c?.name }}</a></h5>
       {{ c.comment }}
