--- a/ApplicationServer/src/app/component/posts/posts.component.html
+++ b/ApplicationServer/src/app/component/posts/posts.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="globals.logged">
+<div *ngIf="globals.logged && !hideSubmit">
   <h4 class="mt-4">Submit a post</h4>
   <hr>
   <form (submit)="submit()" ngNativeValidate>
       <div class="form-group">
       <label for="title">Title: </label>
-      <input type="text" [(ngModel)]="dataSendItem.title" name="title" class="form-control" required>
+      <input type="text" class="form-control" [(ngModel)]="dataSendItem.title" name="title" required>
     </div>
     <div class="form-group">
       <label for="body">Contents: </label>
@@ -15,7 +15,7 @@
       <input type="tags" [(ngModel)]="dataSendItem.tags" name="tags" placeholder="Comma separated tags" class="form-control">
     </div>
     <div class="form-group">
-      <input type="submit" value="Login" class="btn btn-primary"> 
+      <input type="submit" value="Submit" class="btn btn-primary"> 
     </div>
     <div [class.show-feedback]="error" class="invalid-feedback">{{ error }}</div>
   </form>
@@ -36,7 +36,7 @@
   <p>Posted on {{ post.created | date:'full' }} <span *ngIf="post.edited">Last edit on {{ post.edited | date:'full' }}</span></p>
 
   <!-- Tags -->
-  <p>Tags: <span *ngFor="let t of post.tags"><a href="#" routerLink="/posts/tag/{{ t }}">{{ t }}</a>, </span></p>
+  <p>Tags: <span class="badge badge-info tag" *ngFor="let t of post.tags"><a href="#" routerLink="/posts/tag/{{ t }}">{{ t }}</a></span></p>
   
   <hr>
 
