--- a/ApplicationServer/src/app/component/tags/tags.component.html
+++ b/ApplicationServer/src/app/component/tags/tags.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-lg-6">
           <span *ngFor="let d of dataItem[0]?.data">
-            <a href="/posts/tag/{{ d.tag }}">{{ d.tag | titlecase }}</a> 
+            <a routerLink="/posts/tag/{{ d.tag }}">{{ d.tag | titlecase }}</a> 
           </span>
       </div>
     </div>
